# zanzibar

./: Cargo.toml  README.md  schema.sql
.github/workflows/: nightly-bench.yml  pr.yml  release.yml
benches/: README.md  postgres_scale.rs
src/: anvil.rs  lib.rs  postgres.rs
tests/: anvil_backend.rs  common.rs  integration_test.rs  proptest_graph.proptest-regressions  proptest_graph.rs
