[package]
name = "zanzibar"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
readme = "README.md"
description = "A high-performance, Postgres-backed ReBAC (Relationship-Based Access Control) engine inspired by Google's Zanzibar paper."
keywords = ["authorization", "zanzibar", "rebac", "postgres", "sqlx"]
categories = ["authentication", "database"]
authors = ["Worka <engineering@worka.ai>"]
homepage = "https://github.com/worka-ai/zanzibar"
repository = "https://github.com/worka-ai/zanzibar"

[dependencies]
anyhow = "1.0"
anvil-storage = { version = "0.2.0", path = "../../../anvil/clients/rust", optional = true }
async-trait = "0.1.89"
moka = { version = "0.12.14", features = ["future"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "json"] }
thiserror = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.14", optional = true }
tracing = "0.1"

[features]
default = []
anvil = ["dep:anvil-storage", "dep:tonic"]

[dev-dependencies]
proptest = "1.6.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio-test = "0.4.4"
rand = "0.8"
futures = "0.3"

[[bench]]
name = "postgres_scale"
harness = false
