[package]
name = "zanzibar"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
readme = "README.md"
description = "An Anvil-backed ReBAC engine inspired by Google's Zanzibar paper."
keywords = ["authorization", "zanzibar", "rebac", "anvil"]
categories = ["authentication"]
authors = ["Worka <engineering@worka.ai>"]
homepage = "https://github.com/worka-ai/zanzibar"
repository = "https://github.com/worka-ai/zanzibar"

[dependencies]
anyhow = "1.0"
anvil-storage = { version = "0.3.0" }
async-trait = "0.1.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
tonic = { version = "0.14" }
tracing = "0.1"

[dev-dependencies]
proptest = "1.6.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio-test = "0.4.4"
rand = "0.8"
futures = "0.3"
